fixed spacing problem on right edge of page

--- a/React_practice/StillSea/App.css
+++ b/React_practice/StillSea/App.css
@@ -72,8 +72,7 @@
 	 background-color: #eea;
 	 text-align: center;
 	 width: 100%;
-	 padding: 1em;
-	 height: 10em;
+	 height: 13em;
 }
 .graph-div{
 	width: 17em;
